--- a/source/index.html
+++ b/source/index.html
@@ -7,7 +7,7 @@
   <body class="page__body">
     <header class="main-header">
       <a class="main-header__logo logo">
-        <img class="main-header__logo-image logo__image" src="img/mishka-logo-mobile.svg" width="86px" height="35px" alt="Логотип магазина Мишка.">
+        <img class="main-header__logo-image logo__image" src="" width="86px" height="35px" alt="Логотип магазина Мишка.">
       </a>
       <nav class="main-nav">
         <button class="main-nav__toggle" type="button">
@@ -157,9 +157,7 @@
             <td>г. Санкт-Петербург ул. Большая Конюшенная д. 19/8, офис 101</td>
           </tr>
         </table>
-        <map class="contacts__map">
-
-        </map>
+        <iframe src="" width="320px" height="450px" name="map"></iframe>
         <a class="contacts__write button" href="#">Напишите нам</a>
       </section>
     </main>
