Вносит правки по комментариям

--- a/source/index.html
+++ b/source/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html class="page" lang="ru">
+<html lang="ru">
   <head>
     <meta charset="utf-8">
     <title>Mагазин «Мишка»</title>
   </head>
-  <body class="page__body">
+  <body>
     <header class="main-header">
       <a class="main-header__logo logo">
         <img class="main-header__logo-image logo__image" src="" width="86px" height="35px" alt="Логотип магазина Мишка.">
@@ -131,15 +131,15 @@
               </cite>
             </blockquote>
           </div>
+          <p class="reviews__buttons slider__buttons">
+            <button class="slider__button slider__button--prev" type="button">
+              <span class="visually-hidden">Предыдущий отзыв</span>
+            </button>
+            <button class="slider__button slider__button--next" type="button">
+              <span class="visually-hidden">Следующий отзыв</span>
+            </button>
+          </p>
         </div>
-        <p class="reviews__buttons slider__buttons">
-          <button class="slider__button slider__button--prev" type="button">
-            <span class="visually-hidden">Предыдущий отзыв</span>
-          </button>
-          <button class="slider__button slider__button--next" type="button">
-            <span class="visually-hidden">Следующий отзыв</span>
-          </button>
-        </p>
         <a class="reviews__write button" href="#">Написать</a>
       </section>
 
