--- a/source/index.html
+++ b/source/index.html
@@ -7,7 +7,7 @@
   <body>
     <header class="main-header">
       <a class="main-header__logo logo">
-        <img class="main-header__logo-image logo__image" src="" width="86px" height="35px" alt="Логотип магазина Мишка.">
+        <img class="main-header__logo-image logo__image" src="" width="86" height="35" alt="Логотип магазина Мишка.">
       </a>
       <nav class="main-nav">
         <button class="main-nav__toggle" type="button">
@@ -169,17 +169,17 @@
         </a>
         <ul class="main-footer__social social-list">
           <li class="social-list__item">
-            <a class="social-list__link social-list__link--vk">
+            <a class="social-list__link social-list__link--vk" href="#">
               <span class="visually-hidden">Вконтакте</span>
             </a>
           </li>
           <li class="social-list__item">
-            <a class="social-list__link social-list__link--yt">
+            <a class="social-list__link social-list__link--yt" href="#">
               <span class="visually-hidden">YouTube</span>
             </a>
           </li>
           <li class="social-list__item">
-            <a class="social-list__link social-list__link--tg">
+            <a class="social-list__link social-list__link--tg" href="#">
               <span class="visually-hidden">Telegram</span>
             </a>
           </li>
