--- a/source/catalog.html
+++ b/source/catalog.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Mагазин «Мишка»</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <header class="main-header">
@@ -23,10 +24,10 @@
         </ul>
         <ul class="main-nav__list user-list">
           <li class="user-list__item">
-            <a class="user-list__search" href="#">Поиск по сайту</a>
+            <a class="user-list__link user-list__link--search" href="#">Поиск по сайту</a>
           </li>
           <li class="user-list__item">
-            <a class="user-list__cart" href="#">Корзина: пока пуста</a>
+            <a class="user-list__link user-list__link--cart" href="#">Корзина: пока пуста</a>
           </li>
         </ul>
         <ul class="main-nav__list promo-list">
@@ -44,44 +45,44 @@
     </header>
 
     <main class="main-container">
-      <h1 class="title">Каталог товаров</h1>
       <section class="catalog">
+        <h1 class="catalog__title title">Каталог товаров</h1>
         <ul class="catalog__list">
           <li class="catalog__item product-card">
             <img class="product-card__image" src="" alt="Игрушка зайчик.">
-            <a class="product-card__link">
+            <a class="product-card__link" href="#">
               <h2 class="product-card__title">Зайчик-попрыгайчик</h2>
             </a>
             <p class="product-card__info">Рост 30 см, вес 200 г</p>
             <div class="product-card__wrapper">
               <span class="product-card__price">1 200 руб.</span>
-              <a class="product-card__link">
+              <a class="product-card__link" href="#">
                 <span class="visually-hidden">Добавить в корзину</span>
               </a>
             </div>
           </li>
           <li class="catalog__item product-card">
             <img class="product-card__image" src="" alt="Корзинка для белья.">
-            <a class="product-card__link">
+            <a class="product-card__link" href="#">
               <h2 class="product-card__title">Корзинка для белья</h2>
             </a>
             <p class="product-card__info">Диаметр 15 см, высота 10 см</p>
             <div class="product-card__wrapper">
               <span class="product-card__price">690 руб.</span>
-              <a class="product-card__link">
+              <a class="product-card__link" href="#">
                 <span class="visually-hidden">Добавить в корзину</span>
               </a>
             </div>
           </li>
           <li class="catalog__item product-card">
             <img class="product-card__image" src="" alt="Большая корзинка для игрушек.">
-            <a class="product-card__link">
+            <a class="product-card__link" href="#">
               <h2 class="product-card__title">Большая корзинка для игрушек</h2>
             </a>
             <p class="product-card__info">Диаметр 30 см, высота 30 см</p>
             <div class="product-card__wrapper">
               <span class="product-card__price">1 500 руб.</span>
-              <a class="product-card__link">
+              <a class="product-card__link" href="#">
                 <span class="visually-hidden">Добавить в корзину</span>
               </a>
             </div>
@@ -123,7 +124,7 @@
             </a>
           </li>
         </ul>
-        <a class="main-footer__copyright">
+        <a class="main-footer__copyright" href="#">
           Разработано
         </a>
       </div>
