--- a/source/form.html
+++ b/source/form.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Mагазин «Мишка»</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <header class="main-header">
@@ -23,10 +24,10 @@
         </ul>
         <ul class="main-nav__list user-list">
           <li class="user-list__item">
-            <a class="user-list__search" href="#">Поиск по сайту</a>
+            <a class="user-list__link user-list__link--search" href="#">Поиск по сайту</a>
           </li>
           <li class="user-list__item">
-            <a class="user-list__cart" href="#">Корзина: пока пуста</a>
+            <a class="user-list__link user-list__link--cart" href="#">Корзина: пока пуста</a>
           </li>
         </ul>
         <ul class="main-nav__list promo-list">
@@ -44,9 +45,8 @@
     </header>
 
     <main class="main-container">
-      <h1 class="title">Вязание на заказ</h1>
       <section class="order">
-        <h2 class="visually-hidden">Форма для заказа</h2>
+        <h1 class="order__title title">Вязание на заказ</h1>
         <p class="order__text">
           Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.
         </p>
@@ -183,7 +183,7 @@
             </a>
           </li>
         </ul>
-        <a class="main-footer__copyright">
+        <a class="main-footer__copyright" href="#">
           Разработано
         </a>
       </div>
