--- a/source/index.html
+++ b/source/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Mагазин «Мишка»</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <header class="main-header">
@@ -23,10 +24,10 @@
         </ul>
         <ul class="main-nav__list user-list">
           <li class="user-list__item">
-            <a class="user-list__search" href="#">Поиск по сайту</a>
+            <a class="user-list__link user-list__link--search" href="#">Поиск по сайту</a>
           </li>
           <li class="user-list__item">
-            <a class="user-list__cart" href="#">Корзина: пока пуста</a>
+            <a class="user-list__link user-list__link--cart" href="#">Корзина: пока пуста</a>
           </li>
         </ul>
         <ul class="main-nav__list promo-list">
@@ -184,7 +185,7 @@
             </a>
           </li>
         </ul>
-        <a class="main-footer__copyright">
+        <a class="main-footer__copyright" href="#">
           Разработано
         </a>
       </div>
