--- a/source/index.html
+++ b/source/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Mагазин «Мишка»</title>
     <link href="css/style.css" rel="stylesheet">
   </head>
@@ -173,7 +173,9 @@
               <td>г. Санкт-Петербург <br>ул. Большая Конюшенная <br>д. 19/8, офис 101</td>
             </tr>
           </table>
-          <iframe class="contacts__map" src="" name="map"></iframe>
+          <div class="contacts__map-wrapper">
+            <iframe class="contacts__map-iframe" src="" name="map"></iframe>
+          </div>
           <a class="contacts__write button" href="#">Напишите нам</a>
         </div>
       </section>
