Добавляет сетку на страницу формы

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -49,10 +49,10 @@
       </div>
     </header>
 
-    <main class="page__main main-container">
-      <section class="catalog-inner-header">
-        <h1 class="catalog-inner-header__title title">Каталог товаров</h1>
-      </section>
+    <main class="page__main main-inner">
+      <div class="main-inner__title-wrapper">
+        <h1 class="main-inner__title title">Каталог товаров</h1>
+      </div>
       <section class="catalog">
         <ul class="catalog__list">
           <li class="catalog__item product-card">
