Вносит правки для состояний интерактивных элементов

--- a/source/index.html
+++ b/source/index.html
@@ -11,7 +11,7 @@
       <div class="main-header__wrapper">
         <nav class="main-nav main-nav--opened">
           <a class="main-nav__logo logo">
-            <img class="main-hav__logo-image logo__image" src="img/mishka-logo-mobile.svg" width="86px" height="35px" alt="Логотип магазина Мишка.">
+            <img class="main-nav__logo-image logo__image" src="img/mishka-logo-mobile.svg" width="86px" height="35px" alt="Логотип магазина Мишка.">
           </a>
             <button class="main-nav__toggle" type="button">
               <span class="visually-hidden">Открыть меню</span>
