--- a/source/index.html
+++ b/source/index.html
@@ -9,9 +9,13 @@
   <body class="page">
     <header class="page__header main-header">
       <div class="main-header__wrapper">
-        <nav class="main-nav main-nav--opened">
+        <nav class="main-nav main-nav--closed">
           <a class="main-nav__logo logo">
-            <img class="main-nav__logo-image logo__image" src="img/mishka-logo-mobile.svg" width="86px" height="35px" alt="Логотип магазина Мишка.">
+            <picture>
+              <source media="(min-width: 1150px)" srcset="img/header-logo-desktop.svg" width="137px" height="66px">
+              <source media="(min-width: 768px)" srcset="img/header-logo-tablet.svg" width="113px" height="46px">
+              <img class="main-nav__logo-image logo__image" src="img/header-logo-mobile.svg" width="86px" height="35px" alt="Логотип магазина Мишка.">
+            </picture>
           </a>
           <button class="main-nav__toggle" type="button">
             <span class="visually-hidden">Открыть меню</span>
@@ -107,7 +111,11 @@
                 <td>15см<td>
               </tr>
             </table>
-            <img class="special__image" src="" alt="Вязаные корзинки.">
+            <picture>
+              <source media="(min-width: 1150px)" srcset="img/special-desktop.jpg 1x, img/special-desktop@2x.jpg 2x">
+              <source media="(min-width: 768px)" srcset="img/special-tablet.jpg 1x, img/special-tablet@2x.jpg 2x">
+              <img class="special__image" src="img/special-mobile.jpg" srcset="img/special-mobile@2x.jpg 2x" alt="Вязаные корзинки.">
+            </picture>
             <p class="special__price">Цена: 990 руб.</p>
             <a class="special__button button" href="#">Заказать</a>
           </div>
@@ -228,7 +236,7 @@
         </ul>
         <div class="main-footer__copyright">
           <span>Разработано</span>
-          <a class="main-footer__copyright-link" href="#">
+          <a class="main-footer__copyright-link" href="https://htmlacademy.ru/intensive/adaptive">
             <svg width="27" height="35" viewBox="0 0 27 35" xmlns="http://www.w3.org/2000/svg"><path d="M13.6 0h-.1L0 1.4v24.7l13.5 8 13.4-8V1.4L13.6 0ZM25 12.1 13.5 5.3v-.1h-.1l-.1-.1v.1L1.9 12.1v-9l11.5-1.2L25 3.1v9ZM13.4 6.8l11.5 6.7-4.5 2.6-7.1-4.2v1.4l5.9 3.5-.9.5-5-3v1.4l3.8 2.3-.8.5-3-1.8v1.4l1.9 1.1-1.8 1.1L2 13.6l11.4-6.8ZM1.9 15.1l11.4 6.8v1l-7.9-4.7v1.4l8 4.8v1.1l-8-4.7v1.4l8 4.8 8.1-4.9v-5.2l3.4-2v10l-11.5 6.9L1.9 25v-9.9Z"/></svg>
           </a>
         </div>
