Добавляет модальное окно

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -74,12 +74,12 @@
           <li class="catalog__item product-card">
             <a class="product-card__link-image" href="#">
               <picture>
-                <source type="image/webp" media="(min-width: 1150px)" srcset="img/catalog/photo-1-desktop.webp 1x, img/catalog/photo-1-desktop@2x.webp 2x">
-                <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog/photo-1-tablet.webp 1x, img/catalog/photo-1-tablet@2x.webp 2x">
-                <source type="image/webp" srcset="img/catalog/photo-1-mobile.webp 1x, img/catalog/photo-1-mobile@2x.webp 2x">
-                <source media="(min-width: 1150px)" srcset="img/catalog/photo-1-desktop.jpg 1x, img/catalog/photo-1-desktop@2x.jpg 2x">
-                <source media="(min-width: 768px)" srcset="img/catalog/photo-1-tablet.jpg 1x, img/catalog/photo-1-tablet@2x.jpg 2x">
-                <img class="product-card__image" src="img/catalog/photo-1-mobile.jpg" srcset="img/catalog/photo-1-mobile@2x.jpg 2x" alt="Игрушка зайчик.">
+                <source type="image/webp" media="(min-width: 1150px)" srcset="img/catalog/photo-1-desktop.webp 1x, img/catalog/photo-1-desktop@2x.webp 2x" width="316" height="462">
+                <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog/photo-1-tablet.webp 1x, img/catalog/photo-1-tablet@2x.webp 2x" width="334" height="334">
+                <source type="image/webp" srcset="img/catalog/photo-1-mobile.webp 1x, img/catalog/photo-1-mobile@2x.webp 2x" width="260" height="195">
+                <source media="(min-width: 1150px)" srcset="img/catalog/photo-1-desktop.jpg 1x, img/catalog/photo-1-desktop@2x.jpg 2x" width="316" height="462">
+                <source media="(min-width: 768px)" srcset="img/catalog/photo-1-tablet.jpg 1x, img/catalog/photo-1-tablet@2x.jpg 2x" width="334" height="334">
+                <img class="product-card__image" src="img/catalog/photo-1-mobile.jpg" srcset="img/catalog/photo-1-mobile@2x.jpg 2x" width="260" height="195" alt="Игрушка зайчик.">
               </picture>
             </a>
             <div class="product-card__wrapper">
@@ -101,9 +101,9 @@
           <li class="catalog__item product-card">
             <a class="product-card__link-image" href="#">
               <picture>
-                <source media="(min-width: 1150px)" srcset="img/catalog/photo-2-desktop.jpg 1x, img/catalog/photo-2-desktop@2x.jpg 2x">
-                <source media="(min-width: 768px)" srcset="img/catalog/photo-2-tablet.jpg 1x, img/catalog/photo-2-tablet@2x.jpg 2x">
-                <img class="product-card__image" src="img/catalog/photo-2-mobile.jpg" srcset="img/catalog/photo-2-mobile@2x.jpg 2x" alt="Корзинка для белья.">
+                <source media="(min-width: 1150px)" srcset="img/catalog/photo-2-desktop.jpg 1x, img/catalog/photo-2-desktop@2x.jpg 2x" width="316" height="462">
+                <source media="(min-width: 768px)" srcset="img/catalog/photo-2-tablet.jpg 1x, img/catalog/photo-2-tablet@2x.jpg 2x" width="334" height="334">
+                <img class="product-card__image" src="img/catalog/photo-2-mobile.jpg" srcset="img/catalog/photo-2-mobile@2x.jpg 2x" width="260" height="195" alt="Корзинка для белья.">
               </picture>
             </a>
             <div class="product-card__wrapper">
@@ -125,9 +125,9 @@
           <li class="catalog__item product-card">
             <a class="product-card__link-image" href="#">
               <picture>
-                <source media="(min-width: 1150px)" srcset="img/catalog/photo-3-desktop.jpg 1x, img/catalog/photo-3-desktop@2x.jpg 2x">
-                <source media="(min-width: 768px)" srcset="img/catalog/photo-3-tablet.jpg 1x, img/catalog/photo-3-tablet@2x.jpg 2x">
-                <img class="product-card__image" src="img/catalog/photo-3-mobile.jpg" srcset="img/catalog/photo-3-mobile@2x.jpg 2x" alt="Большая корзинка для игрушек.">
+                <source media="(min-width: 1150px)" srcset="img/catalog/photo-3-desktop.jpg 1x, img/catalog/photo-3-desktop@2x.jpg 2x" width="316" height="462">
+                <source media="(min-width: 768px)" srcset="img/catalog/photo-3-tablet.jpg 1x, img/catalog/photo-3-tablet@2x.jpg 2x" width="334" height="334">
+                <img class="product-card__image" src="img/catalog/photo-3-mobile.jpg" srcset="img/catalog/photo-3-mobile@2x.jpg 2x" width="260" height="195" alt="Большая корзинка для игрушек.">
               </picture>
             </a>
             <div class="product-card__wrapper">
@@ -153,9 +153,9 @@
           <h2 class="production__title">Процесс производства</h2>
           <div class="production__video-wrapper">
             <picture>
-              <source media="(min-width: 1150px)" srcset="img/catalog/video-desktop.jpg 1x, img/catalog/video-desktop@2x.jpg 2x">
-              <source media="(min-width: 768px)" srcset="img/catalog/video-desktop.jpg 1x, img/catalog/video-tablet@2x.jpg 2x">
-              <img class="production__video" src="img/catalog/video-mobile.jpg" srcset="img/catalog/video-mobile@2x.jpg 2x" alt="Производство.">
+              <source media="(min-width: 1150px)" srcset="img/catalog/video-desktop.jpg 1x, img/catalog/video-desktop@2x.jpg 2x" width="682.65" height="455">
+              <source media="(min-width: 768px)" srcset="img/catalog/video-desktop.jpg 1x, img/catalog/video-tablet@2x.jpg 2x" width="668" height="455">
+              <img class="production__video" src="img/catalog/video-mobile.jpg" srcset="img/catalog/video-mobile@2x.jpg 2x" width="260" height="150" alt="Производство.">
             </picture>
             <a class="production__video-play" href="#">
               <span class="visually-hidden">Воспроизвести видео</span>
@@ -216,6 +216,45 @@
         </div>
       </div>
     </footer>
+
+    <div class="modal modal--close">
+      <button class="modal__close">
+        <span class="visually-hidden"></span>
+      </button>
+      <section class="modal__content modal-size">
+        <h2 class="modal-size__title title">
+          Добавить в&nbsp;корзину
+        </h2>
+        <p class="modal-size__text">
+          Выберите размер:
+        </p>
+        <form class="modal-size__form" method="get" action="https://echo.htmlacademy.ru/">
+          <ul class="modal-size__list">
+            <li class="modal-size__item">
+              <input class="modal-size__input visually-hidden" type="radio" value="s" id="size-s" name="size-choice" checked>
+              <label class="modal-size__button" for="size-s">
+                S
+              </label>
+            </li>
+            <li class="modal-size__item">
+              <input class="modal-size__input visually-hidden" type="radio" value="m" id="size-m" name="size-choice">
+              <label class="modal-size__button" for="size-m">
+                M
+              </label>
+            </li>
+            <li class="modal-size__item">
+              <input class="modal-size__input visually-hidden" type="radio" value="m" id="size-l" name="size-choice">
+              <label class="modal-size__button" for="size-l">
+                L
+              </label>
+            </li>
+          </ul>
+          <a class="modal-size__submit-button" href="#">
+            Добавить
+          </a>
+        </form>
+      </section>
+    </div>
 
     <script src="script.js"></script>
   </body>
