Правки по линту

--- a/source/index.html
+++ b/source/index.html
@@ -46,7 +46,7 @@
                 <svg class="main-nav__link-icon user-list__link-icon" width="21" height="18">
                   <use href="img/sprite.svg#icon-cart"></use>
                 </svg>
-                Корзина: пока пуста
+                <span>Корзина: пока пуста</span>
               </a>
             </li>
           </ul>
@@ -74,7 +74,7 @@
             <li class="categories-list__item">
               <a class="categories-list__link categories-list__link--decor" href="#">
                 <svg class="categories-list__link-icon" width="40" height="62">
-                   <use xlink:href="img/sprite.svg#icon-decoration"></use>
+                  <use xlink:href="img/sprite.svg#icon-decoration"></use>
                 </svg>
                 Предметы интерьера
               </a>
