:heavy_check_mark: Сборка #10

--- a/10/index.html
+++ b/10/index.html
@@ -260,7 +260,7 @@
 
     <div class="modal modal--close">
       <button class="modal__close">
-        <span class="visually-hidden"></span>
+        <span class="visually-hidden">Закрыть окно</span>
       </button>
       <section class="modal__content modal-size">
         <h2 class="modal-size__title title">
