--- a/source/index.html
+++ b/source/index.html
@@ -13,7 +13,7 @@
   <body class="page">
     <header class="page__header main-header">
       <div class="main-header__wrapper">
-        <nav class="main-nav main-nav--closed">
+        <nav class="main-nav main-nav--nojs main-nav--closed">
           <a class="main-nav__logo logo">
             <picture>
               <source media="(min-width: 1150px)" srcset="img/header-logo-desktop.svg" width="137px" height="66px">
@@ -296,6 +296,6 @@
       </section>
     </div>
 
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
