:heavy_check_mark: Сборка #10

--- a/10/form.html
+++ b/10/form.html
@@ -14,7 +14,7 @@
   <body class="page">
     <header class="page__header main-header">
       <div class="main-header__wrapper">
-        <nav class="main-nav main-nav--closed main-nav--inner">
+        <nav class="main-nav main-nav--nojs main-nav--opened main-nav--inner">
           <a class="main-nav__logo logo" href="index.html">
             <picture>
               <source media="(min-width: 1150px)" srcset="img/header-logo-desktop.svg" width="137px" height="66px">
@@ -259,6 +259,6 @@
       </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
