Правки по валидатору

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -18,9 +18,9 @@
         <nav class="main-nav main-nav--nojs main-nav--opened main-nav--inner">
           <a class="main-nav__logo logo" href="index.html">
             <picture>
-              <source media="(min-width: 1150px)" srcset="img/header-logo-desktop.svg" width="137px" height="66px">
-              <source media="(min-width: 768px)" srcset="img/header-logo-tablet.svg" width="113px" height="46px">
-              <img class="main-nav__logo-image logo__image" src="img/header-logo-mobile.svg" width="86px" height="35px" alt="Логотип магазина Мишка.">
+              <source media="(min-width: 1150px)" srcset="img/header-logo-desktop.svg" width="137" height="66">
+              <source media="(min-width: 768px)" srcset="img/header-logo-tablet.svg" width="113" height="46">
+              <img class="main-nav__logo-image logo__image" src="img/header-logo-mobile.svg" width="86" height="35" alt="Логотип магазина Мишка.">
             </picture>
           </a>
           <button class="main-nav__toggle" type="button">
@@ -161,10 +161,10 @@
           <h2 class="production__title">Процесс производства</h2>
           <div class="production__video-wrapper">
             <picture>
-              <source type="image/webp" media="(min-width: 1150px)" srcset="img/catalog/video-desktop.webp 1x, img/catalog/video-desktop@2x.webp 2x" width="682.65" height="455">
+              <source type="image/webp" media="(min-width: 1150px)" srcset="img/catalog/video-desktop.webp 1x, img/catalog/video-desktop@2x.webp 2x" width="683" height="455">
               <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog/video-tablet.webp 1x, img/catalog/video-tablet@2x.webp 2x" width="668" height="455">
               <source type="image/webp" srcset="img/catalog/video-mobile.webp 1x, img/catalog/video-mobile@2x.webp 2x" width="260" height="150">
-              <source media="(min-width: 1150px)" srcset="img/catalog/video-desktop.jpg 1x, img/catalog/video-desktop@2x.jpg 2x" width="682.65" height="455">
+              <source media="(min-width: 1150px)" srcset="img/catalog/video-desktop.jpg 1x, img/catalog/video-desktop@2x.jpg 2x" width="683" height="455">
               <source media="(min-width: 768px)" srcset="img/catalog/video-desktop.jpg 1x, img/catalog/video-tablet@2x.jpg 2x" width="668" height="455">
               <img class="production__video" src="img/catalog/video-mobile.jpg" srcset="img/catalog/video-mobile@2x.jpg 2x" width="260" height="150" alt="Производство.">
             </picture>
