--- a/source/form.html
+++ b/source/form.html
@@ -18,9 +18,9 @@
         <nav class="main-nav main-nav--nojs main-nav--opened main-nav--inner">
           <a class="main-nav__logo logo" href="index.html">
             <picture>
-              <source media="(min-width: 1150px)" srcset="img/header-logo-desktop.svg" width="137px" height="66px">
-              <source media="(min-width: 768px)" srcset="img/header-logo-tablet.svg" width="113px" height="46px">
-              <img class="main-nav__logo-image logo__image" src="img/header-logo-mobile.svg" width="86px" height="35px" alt="Логотип магазина Мишка.">
+              <source media="(min-width: 1150px)" srcset="img/header-logo-desktop.svg" width="137" height="66">
+              <source media="(min-width: 768px)" srcset="img/header-logo-tablet.svg" width="113" height="46">
+              <img class="main-nav__logo-image logo__image" src="img/header-logo-mobile.svg" width="86" height="35" alt="Логотип магазина Мишка.">
             </picture>
           </a>
           <button class="main-nav__toggle" type="button">
@@ -72,6 +72,7 @@
         <h1 class="main-inner__title title">Вязание на заказ</h1>
       </div>
       <section class="order">
+        <h2 class="visually-hidden">Форма для заказа</h2>
         <div class="order__wrapper">
           <p class="order__text">
             Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.
@@ -79,7 +80,7 @@
           <form class="order__form form" method="get" action="https://echo.htmlacademy.ru/">
             <fieldset class="form__group form__group--radio">
               <div class="form__title-wrapper form__title-wrapper--radio">
-                <legend class="form__title">Тип</legend>
+                <h3 class="form__title">Тип</h3>
               </div>
               <ul class="form__list form__list--radio">
                 <li class="form__item">
@@ -100,7 +101,7 @@
             </fieldset>
             <fieldset class="form__group form__group--checkbox">
               <div class="form__title-wrapper">
-                <legend class="form__title form__title--color">Цвет</legend>
+                <h3 class="form__title form__title--color">Цвет</h3>
               </div>
               <ul class="form__list form__list--checkbox">
                 <li class="form__item form__item--checkbox">
@@ -149,7 +150,7 @@
             </fieldset>
             <fieldset class="form__group form__group--text">
               <div class="form__title-wrapper">
-                <legend class="form__title form__title--name">ФИО</legend>
+                <h3 class="form__title form__title--name">ФИО</h3>
               </div>
               <ul class="form__list form__list--text">
                 <li class="form__item form__item--text">
