--- a/source/index.html
+++ b/source/index.html
@@ -18,9 +18,9 @@
         <nav class="main-nav main-nav--nojs main-nav--opened">
           <a class="main-nav__logo logo">
             <picture>
-              <source media="(min-width: 1150px)" srcset="img/header-logo-desktop.svg" width="137px" height="66px">
-              <source media="(min-width: 768px)" srcset="img/header-logo-tablet.svg" width="113px" height="46px">
-              <img class="main-nav__logo-image logo__image" src="img/header-logo-mobile.svg" width="86px" height="35px" alt="Логотип магазина Мишка.">
+              <source media="(min-width: 1150px)" srcset="img/header-logo-desktop.svg" width="137" height="66">
+              <source media="(min-width: 768px)" srcset="img/header-logo-tablet.svg" width="113" height="46">
+              <img class="main-nav__logo-image logo__image" src="img/header-logo-mobile.svg" width="86" height="35" alt="Логотип магазина Мишка.">
             </picture>
           </a>
           <button class="main-nav__toggle" type="button">
@@ -110,18 +110,18 @@
               </tr>
               <tr class="table__row">
                 <td>Диаметр:</td>
-                <td>25 см<td>
+                <td>25 см</td>
               </tr>
               <tr class="table__row">
                 <td>Высота:</td>
-                <td>15 см<td>
+                <td>15 см</td>
               </tr>
             </table>
             <picture>
-              <source type="image/webp" media="(min-width: 1150px)" srcset="img/special-desktop.webp 1x, img/special-desktop@2x.webp 2x" width="525px" height="636">
+              <source type="image/webp" media="(min-width: 1150px)" srcset="img/special-desktop.webp 1x, img/special-desktop@2x.webp 2x" width="525" height="636">
               <source type="image/webp" media="(min-width: 768px)" srcset="img/special-tablet.webp 1x, img/special-tablet@2x.webp 2x" width="334" height="414">
               <source type="image/webp" srcset="img/special-mobile.webp 1x, img/special-tablet@2x.webp 2x" width="260" height="315">
-              <source media="(min-width: 1150px)" srcset="img/special-desktop.jpg 1x, img/special-desktop@2x.jpg 2x" width="525px" height="636">
+              <source media="(min-width: 1150px)" srcset="img/special-desktop.jpg 1x, img/special-desktop@2x.jpg 2x" width="525" height="636">
               <source media="(min-width: 768px)" srcset="img/special-tablet.jpg 1x, img/special-tablet@2x.jpg 2x" width="334" height="414">
               <img class="special__image" src="img/special-mobile.jpg" srcset="img/special-mobile@2x.jpg 2x" width="260" height="315" alt="Вязаные корзинки.">
             </picture>
