--- a/source/catalog.html
+++ b/source/catalog.html
@@ -36,7 +36,7 @@
           </ul>
           <ul class="main-nav__list main-nav__list--user user-list">
             <li class="main-nav__item user-list__item">
-              <a class="main-nav__link main-nav__link--search user-list__link user-list__link--search" href="#">
+              <a class="main-nav__link main-nav__link--search user-list__link user-list__link--search" href="#"  aria-label="Поиск по сайту">
                 <svg class="main-nav__link-icon user-list__link-icon" width="18" height="18">
                   <use xlink:href="img/sprite.svg#header-search"></use>
                 </svg>
@@ -186,7 +186,7 @@
 
     <footer class="page__footer main-footer">
       <div class="main-footer__wrapper">
-        <a class="main-footer__logo">
+        <a class="main-footer__logo" href="index.html" aria-label="Главная страница">
           <svg width="102" height="34">
             <use xlink:href="img/sprite.svg#logo-footer"></use>
           </svg>
@@ -219,7 +219,7 @@
         </ul>
         <div class="main-footer__copyright">
           <span>Разработано</span>
-          <a class="main-footer__copyright-link" href="https://htmlacademy.ru/intensive/adaptive">
+          <a class="main-footer__copyright-link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Сайт Html Academy">
             <svg width="27" height="35">
               <use xlink:href="img/sprite.svg#htmlacademy"></use>
             </svg>
